<resources>
    <string name="app_name">CCLApp</string>
    <string name="title_scan">Escanear</string>
    <string name="title_scanned">Escaneados</string>
    <string name="title_resume">Resumen</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_national">Planificaciones Nacionales</string>
    <string name="action_sign_in_urban">Planificaciones Urbanas</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_planifications">Planificaciones</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_short">AppAuth</string>
    <string name="auth_granted">Authorization granted</string>
    <string name="intro_header">OpenID AppAuth Demo</string>
    <string name="openid_logo_content_description">AppAuth Logo</string>
    <string name="refresh_token">Refresh token</string>
    <string name="access_token_expires_at">Access token expires at: %s</string>
    <string name="no_access_token_returned">No access token returned</string>
    <string name="no_refresh_token_returned">No refresh token returned</string>
    <string name="refresh_token_returned">Refresh token returned</string>
    <string name="no_id_token_returned">No ID token returned</string>
    <string name="id_token_returned">ID token returned</string>
    <string name="view_profile">View user info</string>
    <string name="userinfo_profile_content_description">User profile picture</string>
    <string name="login_hint_value">Account ID (e.g. test@example.com)</string>
    <string name="account_id_description">The Account ID is optional. If specified, it is transmitted as a login_hint parameter in the authorization request.</string>
    <string name="auth_options">Authorization options:</string>
    <string name="browser_selector_label">Use browser:</string>
    <string name="browser_icon_contentDescription">Browser app icon</string>
    <string name="browser_appauth_default_label">AppAuth heuristic selection</string>
    <string name="custom_tab_label">"%1$s (custom tab)"</string>
    <string name="retry_label">Retry</string>
    <string name="not_authorized">Not authorized</string>
    <string name="start_authorization">Start authorization</string>
    <string name="reauthorize">Reauthorize</string>
    <string name="sign_out">Sign out</string>
    <string name="no_access_token_expiry">Access time has no defined expiry</string>
    <string name="access_token_expired">Access token has expired</string>
    <string name="auth_settings">Authorization settings in use:</string>
    <string name="use_pending_intents">Use PendingIntent\'s for completion</string>
    <string name="no_planifications">No hay planificaciones para este dia</string>
    <string name="unknown_error">Ocurrio un error desconocido. Intente de nuevo</string>
    <string name="parse_planifications_error">Ocurrio un error al parsear la informacion. Intente de nuevo</string>
    <string name="network_error">Ocurrio un error de red. Intente de nuevo</string>
    <string name="network_error_title">Error de red</string>
    <string name="fetching_driver_error">Error cargando informacion de conductor. Intente de nuevo</string>
    <string name="fetching_profile_error">Error cargando perfil de usuario. Intente de nuevo</string>
    <string name="fetching_userinfo_error">Error cargando usuario. Intente de nuevo</string>
    <string name="retry">Reintentar</string>
    <string name="database_error">Error Base de Datos</string>
    <string name="database_error_saving_planifications">Error al guardar planificaciones en la base de datos local</string>
    <string name="error_fetching_planifications">Error al descargar planificaciones del usuario. Intente de nuevo</string>
    <string name="start_route">Iniciar Ruta</string>
    <string name="title_pending">Pendientes</string>
    <string name="certified_title">Certificados</string>
    <string name="logout">Cerrar sesion</string>
    <string name="title_activity_on_route">Planificacion En Ruta</string>
    <string name="tab_resume">Resumen</string>
    <string name="tab_map">Map</string>
    <string name="national_load">Carga Nacional</string>
    <string name="urban_load">Carga Urbana</string>
    <string name="finalize_route">Finalizar Ruta</string>
    <string name="certified">Certificadas</string>
    <string name="pending">Pendientes</string>
    <string name="certified_lines">Lineas Certificadas</string>
    <string name="pending_lines">Lineas Pendientes</string>
    <string name="certified_deliveries">Guias Certificadas</string>
    <string name="pending_deliveries">Guias Pendientes</string>
    <string name="delivery_lines">Lineas de Guias</string>
    <string name="deliveries">Guias</string>
    <string name="planification_delivered">Planificacion Entregada</string>
    <string name="app_intro_skip_button">SALTAR</string>
    <string name="app_intro_next_button">SIGUIENTE</string>
    <string name="app_intro_back_button">ATRÁS</string>
    <string name="app_intro_done_button">HECHO</string>
    <string name="app_intro_image_content_description">gráficos</string>
    <string name="date">2020–11–05</string>
    <string name="parsing_error_title">Error de parseo</string>
    <string name="parsing_error">Error parseando datos</string>
    <string name="default_notification_channel_id">notificaciones</string>
    <string name="title_activity_dashbooard">Dashboard</string>
    <string name="finished">Finalizado</string>
    <string name="title_activity_delivery">Guias</string>
    <string name="title_activity_delivery_detail">Inicio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_as_cancelled">Cancelar</string>
    <string name="set_as_delivered">Entregar</string>
    <string name="set_as_undelivered">No Entregar</string>
    <string name="end_route">Finalizar Ruta</string>
    <string name="cancel_planification">Cancelar</string>
    <string name="cancel_delivery">Cancelar Delivery</string>
    <string name="cancel_delivery_prompt">Esta seguro de querer cancelar este delivery? Esta accion no puede ser deshecha</string>
    <string name="deliver_delivery">Entregar Delivery</string>
    <string name="deliver_delivery_prompt">Esta seguro de querer entregar este delivery? Esta accion no puede ser deshecha</string>
    <string name="undeliver_delivery">No Entregar Delivery</string>
    <string name="undeliver_delivery_prompt">Esta seguro de querer no entregar este delivery?</string>
    <string name="cancel_planification_prompt">Esta seguro de cancelar esta planificacion?</string>
    <string name="start_route_prompt">Esta seguro de dar inicio a esta ruta?</string>
    <string name="complete_route">Completar Ruta</string>
    <string name="complete_route_prompt">Esta seguro de completar esta ruta?</string>
    <string name="certificate">Certificar</string>
    <string name="start_delivery">Iniciar</string>
    <string name="what_to_do">Que desea hacer?</string>
    <string name="route_started">Ruta Iniciada</string>
    <string name="route_completed">Ruta Completada</string>
    <string name="route_cancelled">Ruta Cancelada</string>
    <string name="items">Items</string>
    <string name="form">Formulario</string>
    <string name="delivery_details">Detalles</string>
    <string name="empty_form_message">Seleccione una accion del menu superior para cargar su formulario</string>
    <string name="input_text_hint">Ingrese su texto…</string>
    <string name="database_error_saving_state_form_definitions">Error al guardar definicion de formulario en la BD</string>
    <string name="no_state_form_found">No se encontro un formulario para el estado seleccionado</string>
    <string name="title_activity_create_signature">Ingrese Firma</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="clear">Limpiar</string>
    <string name="done">Hecho</string>
    <string name="load_file">Cargar archivo</string>
    <string name="load_photo">Cargar imagen</string>
    <string name="load_signature">Cargar firma</string>
    <string name="empty_signature_message">No se registro ninguna firma</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_maps">Ubicacion</string>
    <string name="ok">OK</string>
    <string name="take_photo">Tomar Foto</string>
    <string name="text_not_found">Texto no encontrado</string>
    <string name="item_found">Item encontrado</string>
    <string name="item_not_found">Item no encontrado</string>
    <string name="total_weight">Total Peso</string>
    <string name="total_value">Valor Total</string>
    <string name="detail">Detalles</string>
    <string name="completed">Completado</string>
    <string name="no_label_planification">Planificacion Sin Label</string>
    <string name="not_certified">No Certificados</string>
    <string name="planned">Planned</string>
    <string name="_2021_01_18">2021–01–18</string>
    <string name="navidad_electrolux">Navidad Electrolux</string>
    <string name="national">National</string>
    <string name="_257832_56">257832.56 $</string>
    <string name="gerardo_garcia">Gerardo Garcia</string>
    <string name="lptj878">LPTJ878</string>
    <string name="_0_completado">0% Completado</string>
    <string name="manage">GESTIONAR</string>
    <string name="title_activity_manage_delivery">Procesar Envio</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="choose_state">Elija una accion</string>
    <string name="loading_stateform_def">cargando formulario…</string>
    <string name="required_field">Este campo es requerido</string>
    <string name="required_field_arg">Este campo %1$s es requerido</string>
    <string name="max_value_exceed">Valor maximo es %1$d</string>
    <string name="max_length_exceed">Tamaño maximo es %1$d</string>
    <string name="min_value_exceed">Valor minimo es %1$d</string>
    <string name="min_length_exceed">Tamaño minimo es %1$d</string>
    <string name="regex_not_match">%1$s</string>
    <string name="form_saved_successfully">Formulario Guardado</string>
    <string name="session_expired_title">Sesion Finalizada</string>
    <string name="session_expired_message">Tu sesion ha expirado</string>
    <string name="error">Error</string>
    <string name="no_receiver_name">Sin Nombre</string>
    <string name="bogota">Bogota</string>
    <string name="rafael_cardona">Rafael Cardona</string>
    <string name="_12345">#12345</string>
    <string name="certified_items">Items Certificados</string>
    <string name="how_go">Como llegar?</string>
    <string name="sender_info">Envia:</string>
    <string name="example_address">Calle # 47, Ca 8, Via El Palenque</string>
    <string name="no_map_app_installed">Su dispositivo no tiene la aplicacion Google Maps instalada</string>
    <string-array name="delivery_states_actions">
        <item>Entregar</item>
        <item>No Entregar</item>
    </string-array>
    <string name="title_activity_manage_delivery_items">ManageDeliveryItemsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="login">Entrar</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
</resources>