<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui_delivery_detail.delivery_detail.DeliveryDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_blue">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/deliveryNumberTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/receiverNameTv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_clock___1315_"
                app:drawableTint="#FFFFFF" />

            <TextView
                android:id="@+id/receiverAddressTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_pin_sharp_circle"
                app:drawableTint="#FFFFFF" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sender_info"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/senderNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:text="@string/gerardo_garcia"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_profile_round___1342_"
                app:drawableTint="#FFFFFF"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/citySenderNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:text="@string/bogota"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_pin_sharp_circle"
                app:drawableTint="#FFFFFF"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/completedTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0_completado"
                android:textAlignment="viewEnd"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/completedProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.google.android.material.chip.Chip
            android:id="@+id/deliveryStateChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:checked="false"
            android:elegantTextHeight="false"
            android:text="@string/planned"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="#E48814"
            app:layout_constraintBottom_toBottomOf="@+id/howGoBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/howGoBtn" />

        <Button
            android:id="@+id/howGoBtn"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/how_go"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/semi_card"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:splitMotionEvents="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                app:columnCount="2"
                app:orientation="horizontal"
                app:rowCount="2"
                app:useDefaultMargins="true">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:forceHasOverlappingRendering="false"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/totalItemsChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|top"
                        android:layout_marginTop="-7dp"
                        android:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:text="@string/items"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        app:drawableTopCompat="@drawable/ic__21_delivery_box" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:forceHasOverlappingRendering="true"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/totalCertifiedItemsChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|top"
                        android:layout_marginTop="-7dp"
                        android:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:text="@string/certified_items"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        app:drawableTopCompat="@drawable/ic__05_checklist" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:forceHasOverlappingRendering="false"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/totalWeightChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|top"
                        android:layout_marginTop="-7dp"
                        android:text="0 Kg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:text="@string/total_weight"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        app:drawableTopCompat="@drawable/ic__35_weight_scale" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:forceHasOverlappingRendering="false"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="8dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/totalValueChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|top"
                        android:layout_marginTop="-7dp"
                        android:text="0 $" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:text="@string/total_value"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        app:drawableTopCompat="@drawable/ic__06_shipping_cost" />
                </androidx.cardview.widget.CardView>

            </androidx.gridlayout.widget.GridLayout>

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>